# SuperSimpleTestLib

./: CMakeLists.txt  README.md  TODO.md  main.cpp  makefile  test.cpp  test.hpp  test_entrypoint.cpp  thing.cpp  thing.hpp  thing_test.cpp  thing_test.hpp  triangle3.frag  triangle3.frag.spv  triangle3.vert  triangle3.vert.spv
.cache/clangd/index/: Allocator.cpp.8B7695AD61E03504.idx  Allocator.hpp.E06E70EBCE7B156B.idx  Array.hpp.93D767F46D3C3919.idx  Assert.hpp.16EB9160CC056245.idx  File.cpp.4FD070C191B9DFEB.idx  File.hpp.9507168187498229.idx  Spv.cpp.B03EB4A45AD98605.idx  Spv.hpp.5AABE78DEADA13C2.idx  Vec.hpp.1723385E12EEBAA7.idx  hello_test.cc.24358B73C5583292.idx  hello_test.cpp.EDE49474C60BCBBA.idx  hello_test.hpp.0EDFB5BA28A2D37E.idx  main.cpp.31BADEAC1E31BA35.idx  main.cpp.4A02406FDFDFA52D.idx  spv_test.cpp.FCA57A3507B302EB.idx  spv_test.hpp.501E821B19759347.idx  test.cpp.BE33000C4D37F6EA.idx  test.cpp.FDF58B250419FB12.idx  test.hpp.005F450408107D41.idx  test.hpp.09BFFCF40779776A.idx  test2.cc.DEC893D2345DB553.idx  test_entrypoint.cpp.0FBC7F4BA0084C3F.idx  thing.cpp.2CD9D94FDFB3FDC9.idx  thing.hpp.035E53E48B74C33F.idx  thing_test.cpp.A97234619A17E493.idx  thing_test.hpp.04F5EEC66B3A13DE.idx  tlsf.cpp.8144791731F35B63.idx  tlsf.h.8D90C863CA40E440.idx
example/: SomeClass.cpp  SomeClass.hpp  SomeClassTest.hpp  SomeClassTest_fail.cpp  SomeClassTest_pass.cpp  TestFail  TestPass  makefile  test_entrypoint.cpp
src/: Allocator.cpp  Allocator.hpp  Array.hpp  Assert.hpp  CMakeLists.txt  File.cpp  File.hpp  Spv.cpp  Spv.hpp  Vec.hpp  VulkanErrors.cpp  VulkanErrors.hpp  main.cpp
test/: CMakeLists.txt  spv_test.cpp  spv_test.hpp  test.cpp  test.hpp  test_entrypoint.cpp  test_main.cpp
